[gd_scene load_steps=4 format=3 uid="uid://d23nlcvb4rht3"]

[ext_resource type="Texture2D" uid="uid://b2peq8rpxwenk" path="res://assets/imgs/icon.svg" id="1_8txok"]
[ext_resource type="Script" uid="uid://d06bdpppyvjuv" path="res://food.gd" id="1_pohk7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pohk7"]
size = Vector2(108, 104)

[node name="Food" type="Area2D"]
collision_layer = 4
script = ExtResource("1_pohk7")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8txok")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.08, 1.15852)
shape = SubResource("RectangleShape2D_pohk7")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
